@@ -1,4 +1,4 @@
-dnl $Id: configure.in,v 1.53 2001-02-07 09:49:06 bagder Exp $
+dnl $Id: configure.in,v 1.54 2001-03-04 16:34:20 bagder Exp $
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(lib/urldata.h)
 AM_CONFIG_HEADER(config.h src/config.h)
@@ -733,5 +733,6 @@ AC_OUTPUT( Makefile \
 	   packages/Linux/Makefile \
 	   packages/Linux/RPM/Makefile \
 	   packages/Linux/RPM/curl.spec \
-	   packages/Linux/RPM/curl-ssl.spec )
+	   packages/Linux/RPM/curl-ssl.spec \
+           tiny/Makefile )
 
